--- a/templates/header.html
+++ b/templates/header.html
@@ -18,8 +18,8 @@
             <h3 class="float-md-start mb-0">Cover</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="/" href="/">Головна</a>
-                <a class="nav-link active" aria-current="/login" href="/">Login</a>
-                <a class="nav-link active" aria-current="/signup" href="/">Sign Up</a>
+                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/signup">Sing up</a>
                 <a class="nav-link" href="/contacts">Контакти</a>
                 <a class="nav-link" href="/create">Create post</a>
             </nav>
