--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,15 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-<h1>Sign up</h1>
-<form method="POST" action="/signup">
-  <input type="text" name="username">
-  <input type="password" name="password">
-  <input type="submit" value="Submit">
-</form>
-</body>
-</html>
+{{define "signup"}}
+
+{{template "header"}}
+
+<main class="px-3">
+  <h1>Signup</h1>
+  <p class="lead">
+    <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">~qq~</a>
+  </p>
+  <form action="/signup" method="POST" novalidate>
+    <div>
+
+
+      <p><input type="text" name="username" placeholder="type your login" class="form-control"></p>
+    </div>
+    <div>
+
+
+      <p><input type="password" name="password" class="form-control" placeholder="type your pass" name="content"></p>
+    </div>
+    <div>
+      <button class="btn btn-warning">Lets Go</button>
+    </div>
+  </form>
+
+</main>
+
+{{template "footer"}}
+
+{{end}}
+<!--<h1>Login Page</h1>&ndash;&gt;-->
+<!--<form method="POST" action="/login">-->
+<!--  <input type="text" name="username" placeholder="username">-->
+<!--  <input type="password" name="password" placeholder="password">-->
+<!--  <input type="submit" value="Submit">-->
+<!--</form>
