login and sign up correct work

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,19 @@
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <title></title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Login Page</h1>-->
+<!--<form method="POST" action="/login">-->
+<!--  <input type="text" name="username" placeholder="username">-->
+<!--  <input type="password" name="password" placeholder="password">-->
+<!--  <input type="submit" value="Submit">-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
 {{define "login"}}
 
 {{template "header"}}
@@ -28,9 +44,9 @@
 {{template "footer"}}
 
 {{end}}
-<!--<h1>Login Page</h1>&ndash;&gt;-->
-<!--<form method="POST" action="/login">-->
-<!--  <input type="text" name="username" placeholder="username">-->
-<!--  <input type="password" name="password" placeholder="password">-->
-<!--  <input type="submit" value="Submit">-->
-<!--</form>
+<!--&lt;!&ndash;<h1>Login Page</h1>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;<form method="POST" action="/login">&ndash;&gt;-->
+<!--&lt;!&ndash;  <input type="text" name="username" placeholder="username">&ndash;&gt;-->
+<!--&lt;!&ndash;  <input type="password" name="password" placeholder="password">&ndash;&gt;-->
+<!--&lt;!&ndash;  <input type="submit" value="Submit">&ndash;&gt;-->
+<!--&lt;!&ndash;</form>-->
