--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,7 @@
 {{template "header"}}
 
 <main class="px-3">
+
   <h1>Signup</h1>
   <p class="lead">
     <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">~qq~</a>
@@ -28,9 +29,9 @@
 {{template "footer"}}
 
 {{end}}
-<!--<h1>Login Page</h1>&ndash;&gt;-->
-<!--<form method="POST" action="/login">-->
-<!--  <input type="text" name="username" placeholder="username">-->
-<!--  <input type="password" name="password" placeholder="password">-->
-<!--  <input type="submit" value="Submit">-->
-<!--</form>
+<!--&lt;!&ndash;<h1>Login Page</h1>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;<form method="POST" action="/login">&ndash;&gt;-->
+<!--&lt;!&ndash;  <input type="text" name="username" placeholder="username">&ndash;&gt;-->
+<!--&lt;!&ndash;  <input type="password" name="password" placeholder="password">&ndash;&gt;-->
+<!--&lt;!&ndash;  <input type="submit" value="Submit">&ndash;&gt;-->
+<!--&lt;!&ndash;</form>-->
