--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,28 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Головна сторінка</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="cover.css" rel="stylesheet">
+  <link rel="stylesheet" href="static/css/main.css">
+</head>
+<body class="d-flex h-100 text-center text-white bg-dark">
 
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--  <meta charset="UTF-8">-->
-<!--  <title></title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<h1>Login Page</h1>-->
-<!--<form method="POST" action="/login">-->
-<!--  <input type="text" name="username" placeholder="username">-->
-<!--  <input type="password" name="password" placeholder="password">-->
-<!--  <input type="submit" value="Submit">-->
-<!--</form>-->
-<!--</body>-->
-<!--</html>-->
-{{define "login"}}
-
-{{template "header"}}
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h3 class="float-md-start mb-0">Cover</h3>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link active" aria-current="/" href="/">Головна</a>
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/signup">Sing up</a>
+        <a class="nav-link" href="/contacts">Контакти</a>
+        <a class="nav-link" href="/create">Create post</a>
+      </nav>
+    </div>
+  </header>
 
 <main class="px-3">
   <h1>Login</h1>
@@ -41,12 +47,12 @@
 
 </main>
 
-{{template "footer"}}
+<footer class="mt-auto text-white-50">
+  <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
+          href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+</footer>
+</div>
 
-{{end}}
-<!--&lt;!&ndash;<h1>Login Page</h1>&ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;<form method="POST" action="/login">&ndash;&gt;-->
-<!--&lt;!&ndash;  <input type="text" name="username" placeholder="username">&ndash;&gt;-->
-<!--&lt;!&ndash;  <input type="password" name="password" placeholder="password">&ndash;&gt;-->
-<!--&lt;!&ndash;  <input type="submit" value="Submit">&ndash;&gt;-->
-<!--&lt;!&ndash;</form>-->
+
+</body>
+</html>
