all correct work (login  and sign up) =>  login write(without templates)

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">Cover</h3>
+      <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white float-md-start mb-0">~~qq~~</a>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="/" href="/">Головна</a>
         <a class="nav-link" href="/login">Login</a>
@@ -27,7 +27,6 @@
 <main class="px-3">
   <h1>Login</h1>
   <p class="lead">
-  <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">~qq~</a>
   </p>
   <form action="/login" method="POST" novalidate>
     <div>
@@ -47,10 +46,10 @@
 
 </main>
 
-<footer class="mt-auto text-white-50">
-  <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
-          href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-</footer>
+  <footer class="mt-auto text-white-50">
+    <p>Cover template for <a href="#" class="text-white">~~</a>, by <a
+            href="#" class="text-white">Aerialsq</a>.</p>
+  </footer>
 </div>
 
 
