--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 {{define "footer"}}
 
 <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
-            href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>Cover template for <a href="#" class="text-white">~~</a>, by <a
+            href="#" class="text-white">Aerialsq</a>.</p>
 </footer>
 </div>
 
