--- a/templates/headerU.html
+++ b/templates/headerU.html
@@ -1,4 +1,4 @@
-{{define "header"}}
+{{define "headerU"}}
 
 <html lang="en">
 <head>
@@ -22,6 +22,7 @@
                 <a class="nav-link" href="/signup">Sing up</a>
                 <a class="nav-link" href="/contacts">Контакти</a>
                 <a class="nav-link" href="/create">Create post</a>
+                <a class="nav-link" href="/create">{{ .databaseUsername }}</a>
             </nav>
         </div>
     </header>
