--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,10 +2,10 @@
 {{template "header"}}
 
 <h2>Edit Name and City</h2>
-<form method="POST" action="update">
+<form method="POST" action="updateA">
   <input type="hidden" name="uid" value="{{ .Id }}" />
-  <label> Name </label><input type="text" name="name" value="{{ .Name }}"  /><br />
-  <label> City </label><input type="text" name="city" value="{{ .City }}"  /><br />
+  <label> Title </label><input type="text" name="title" value="{{ .Title }}"  /><br />
+  <label> Anons </label><input type="text" name="anons" value="{{ .Anons }}"  /><br />
   <input type="submit" value="Save user" />
 </form><br />
 
