--- a/templates/new.html
+++ b/templates/new.html
@@ -2,9 +2,9 @@
 {{template "header"}}
 
 <h2>New Name and City</h2>
-<form method="POST" action="insert">
-  <label> Name </label><input type="text" name="name" /><br />
-  <label> City </label><input type="text" name="city" /><br />
+<form method="POST" action="InsertA">
+  <label> Name </label><input type="text" name="title" /><br />
+  <label> City </label><input type="text" name="anons" /><br />
   <input type="submit" value="Save user" />
 </form>
 
