--- a/templates/edit2.html
+++ b/templates/edit2.html
@@ -1,13 +1,11 @@
 {{ define "edit" }}
 {{template "header"}}
-
 <h2>Edit Name and City</h2>
 <form method="POST" action="update">
   <input type="hidden" name="uid" value="{{ .Id }}" />
-  <label> Title </label><input type="text" name="title" value="{{ .Title }}"  /><br />
-  <label> Anons </label><input type="text" name="anons" value="{{ .Anons }}"  /><br />
+  <label> Name </label><input type="text" name="name" value="{{ .Name }}"  /><br />
+  <label> City </label><input type="text" name="city" value="{{ .City }}"  /><br />
   <input type="submit" value="Save user" />
 </form><br />
-
 {{template "footer"}}
 {{ end }}
