--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
         unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
-        Lorem Ipsum.</p>
+        Lorem Ipsumq.</p>
     </p>
 
     {{ range . }}
