bank system  complete!

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <div>
       <a href="/" class="btn btn-lg btn-secondary fw-bold border-white bg-white float-md-start mb-0">~~qq~~</a>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="/" href="/">Головна</a>
+        <a class="nav-link active" aria-current="/" href="/">Main</a>
         <a class="nav-link" href="/login">Login</a>
         <a class="nav-link" href="/signup">Sing up</a>
         <a class="nav-link" href="/contacts">Контакти</a>
